Сделал возможность создавать, редактировать статьи

--- a/components/Post/Post.module.scss
+++ b/components/Post/Post.module.scss
@@ -7,3 +7,10 @@
   border-radius: 8px !important;
   margin-bottom: 30px;
 }
+
+.text {
+  a {
+    color: #07a287;
+    text-decoration: underline;
+  }
+}
