Финальная часть.Реализовал возможность добавления комментарий по id юзера и поста

--- a/components/FullPost/FullPost.module.scss
+++ b/components/FullPost/FullPost.module.scss
@@ -7,6 +7,12 @@
     margin-bottom: 15px;
     font-size: 18px;
   }
+  .text {
+    a {
+      color: #07a287;
+      text-decoration: underline;
+    }
+  }
 }
 
 .title {
