--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -63,6 +63,12 @@
   }
 }
 
+.searchBlockPopup {
+  position: absolute !important;
+  top: 40px;
+  width: 310px;
+}
+
 .loginButton {
   display: flex;
   align-items: center;
