--- a/components/SideComments/SideComments.module.scss
+++ b/components/SideComments/SideComments.module.scss
@@ -33,6 +33,11 @@
 
 .commentItem {
   margin-bottom: 25px;
+  border-bottom: 1px solid rgb(0, 0, 0, 0.1);
+  padding-bottom: 20px;
+  &:last-child {
+    border-bottom: none;
+  }
 }
 
 .userInfo {
@@ -45,6 +50,10 @@
     border-radius: 3px;
     margin-right: 8px;
   }
+
+  b {
+    margin-left: 10px;
+  }
 }
 
 .text {
@@ -56,4 +65,5 @@
 .postTitle {
   font-size: 15px;
   font-weight: 500;
+  cursor: pointer;
 }
