--- a/components/Comment/Comment.module.scss
+++ b/components/Comment/Comment.module.scss
@@ -4,6 +4,10 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
+.item {
+  margin-top: 40px;
+}
+
 .userInfo {
   display: flex;
   align-items: center;
