--- a/components/FullPost/FullPost.module.scss
+++ b/components/FullPost/FullPost.module.scss
@@ -1,8 +1,10 @@
 .paper {
   margin-top: -20px;
   border-radius: 0 !important;
-  padding: 30px 0;
-
+  padding: 30px 100px;
+  @media (max-width: 1028px) {
+    padding: 30px 0;
+  }
   p {
     margin-bottom: 15px;
     font-size: 18px;
@@ -19,6 +21,9 @@
   font-weight: 500 !important;
   margin-bottom: 20px !important;
   font-size: 36px !important;
+  @media (max-width: 767px) {
+    font-size: 24px !important;
+  }
 }
 
 .userInfo {
