--- a/components/LeftMenu/LeftMenu.module.scss
+++ b/components/LeftMenu/LeftMenu.module.scss
@@ -2,12 +2,16 @@
   width: 200px;
   position: sticky;
   top: 80px;
-
+  @media (max-width: 1028px) {
+    width: 100%;
+  }
   ul {
     list-style: none;
     padding: 0;
     margin: 0;
-
+    // @media (max-width: 1028px) {
+    //   display: none;
+    // }
     li {
       margin-bottom: 4px;
 
