--- a/components/Post/Post.module.scss
+++ b/components/Post/Post.module.scss
@@ -6,6 +6,11 @@
 .paper {
   border-radius: 8px !important;
   margin-bottom: 30px;
+  padding: 30px 50px !important;
+  @media (max-width: 767px) {
+    padding: 30px 20px 20px !important;
+    border-radius: 0 !important;
+  }
 }
 
 .text {
