--- a/components/EntryButton/EntryButton.module.scss
+++ b/components/EntryButton/EntryButton.module.scss
@@ -1,5 +1,3 @@
-.avatar {
-  margin-left: 15px;
-  border-radius: 20% !important;
-  margin-right: 6px;
+.penButton {
+  margin-left: 20px !important;
 }
