--- a/components/WriteForm/WriteForm.module.scss
+++ b/components/WriteForm/WriteForm.module.scss
@@ -13,6 +13,17 @@
   }
 }
 
+.button {
+  z-index: 10;
+  width: 100%;
+  left: 0;
+  bottom: 49px;
+  @media (max-width: 767px) {
+    position: fixed !important;
+    border-radius: 0 !important;
+  }
+}
+
 .editor {
   font-size: 18px;
   height: calc(100vh - 220px);
