fix: Added "PostDialog", fixed bags

--- a/components/Post/Post.module.scss
+++ b/components/Post/Post.module.scss
@@ -13,6 +13,12 @@
   }
 }
 
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .text {
   a {
     color: #07a287;
